added following addresses aggregation + tweaked scoring based on follow & tx insights